fix alignment of show password button. #61624386

--- a/app/assets/stylesheets/catarse_bootstrap/_forms.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_forms.sass
@@ -39,8 +39,8 @@ input[type='checkbox']
 
 .show-password
   position: absolute
-  right: 24px
-  top: 190px
+  right: 15px
+  bottom: 1px
   input
     margin: 0 .4em
 
